--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -244,6 +244,18 @@ SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted
                 android:resource="@xml/remotecommandplugin_widget" />
         </receiver>
 
+        <receiver
+            android:name="org.kde.kdeconnect.Plugins.ClibpoardPlugin.ClipboardWidgetProvider"
+            android:label="Send Clipboard"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/send_clipboard_widget" />
+        </receiver>
+
         <activity android:name="org.kde.kdeconnect.Plugins.RunCommandPlugin.RunCommandUrlActivity"
             android:exported="true">
             <intent-filter>
